remove security manager from docker command since it is not needed there